--- a/src/main/resources/WEB-INF/templates/inc/layout.htm
+++ b/src/main/resources/WEB-INF/templates/inc/layout.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,minimal-ui=yes">
-    <title>${VIEWBAG.title == "" ? "Elune" : VIEWBAG.title}</title>
+    <title>${VIEWBAG.title != null ? VIEWBAG.title : "Elune"}</title>
     <meta name="description" content="${VIEWBAG.description}">
     <meta name="keywords" content="${VIEWBAG.keywords}">
     <meta name="renderer" content="webkit">
